画像を添付できるように設定

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -5,5 +5,6 @@
   <%= f.text_area :measure, placeholder: "手段" %>
   <%= f.text_area :result, placeholder: "結果" %>
   <%= f.text_field :tag_name, placeholder: "タグ" %>
+  <%= f.file_field :image %>
   <%= f.submit "投稿" %>
 <% end %>
