--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,34 @@
-<% @articles.each do |article| %>
-  <div class="articleIndex__articleContainer">
-    <div class="articleIndex__themeContainer">
-      研究テーマ：<%= article.theme %>
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
+<%= render partial: 'header' %>
+<% if user_signed_in? %>
+  <div class="articleIndex__header">
+  <%= form_with(url: search_articles_path, local: true, method: :get, class: "search-form") do |form| %>
+    <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
+    <div class="search-btn-space">
+      <%= form.submit "検索", class: "search-btn" %>
     </div>
-    <div class="articleIndex__issueContainer">
-      課題：<%= article.issue %>
-    </div>
-    <div class="articleIndex__measureContainer">
-      手段：<%= article.measure %>
-    </div>
-    <div class="articleIndex__resultContainer">
-      結果：<%= article.result %>
-    </div>
+  <% end %>
+  </div>
 <% end %>
+
+<div id="contents">
+<h2>投稿された記事一覧</h2>
+<%=render partial:'articles', locals: {articles: @articles} %>
+
+
+</div>
+<!--/contents-->
+
+<footer>
+<small>Copyright&copy; <a href="index.html">SAMPLE SITE</a> All Rights Reserved.</small>
+<span class="pr">《<a href="https://template-party.com/" target="_blank">Web Design:Template-Party</a>》</span>
+</footer>
+
+</div>
+<!--/container-->
+
+</body>
+</html>
