一覧画面のビューを修正

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,7 +15,7 @@
 <% end %>
 
 <div id="contents">
-<h2>投稿された記事一覧</h2>
+<h2 class="sectionHeader">投稿された記事一覧</h2>
 <%=render partial:'articles', locals: {articles: @articles} %>
 
 
