部分テンプレートを編集

--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -20,7 +20,7 @@
           タグ：<%= article.tags.first&.tag_name%>
         </div>
         <div class="articleIndex__postingTime">
-          <%= l article.created_at %>
+          <%= l article.updated_at %>
         </div>
         <div class="articleIndex__username">
           <%= article.user.name %>
