--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: 'articles/header' %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<%= form_with(model: @user, url: user_registration_path, local: true) do |f| %>
+  <%= render "devise/shared/error_messages", model: f.object %>
 
   <div class="field">
     <%= f.label :name %><br />
