--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,34 @@
 <%= render partial: 'articles/header' %>
-
-<%= form_with(model: @user, url: user_registration_path, local: true) do |f| %>
-  <%= render "devise/shared/error_messages", model: f.object %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  <div class="field">
+<div class="registrationFormContainer">
+  <%= form_with(model: @user, url: user_registration_path, html: {class: "registrationForm"}, local: true) do |f| %>
+  
+  <div class="registrationFormGroup">
+    <div>
+      <%= f.label :name %><br />
+      <%= f.text_field :name, autofocus: true, class: "registrationFormPart" %>
+    </div>
+  </div>
+  <div class="registrationFormGroup">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
+    <%= f.email_field :email, autocomplete: "email", class: "registrationFormPart" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="registrationFormGroup">
+    <%= f.label :password %><em>(<%= @minimum_password_length %> characters minimum)</em>
+    <%= f.password_field :password, autocomplete: "new-password", class: "registrationFormPart" %>
   </div>
-
-  <div class="field">
+  <div class="registrationFormGroup">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "registrationFormPart" %>
   </div>
+    <div class="registrationFormBtnContainer">
+    <%= f.submit "Sign up", class: "registrationFormBtn" %>
+    </div>
+  </div>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+<div class="errorMessagesContainer">
+  <%= render "devise/shared/error_messages", model: f.object %>
+</div>
+  <% end %>
 
 <%# <%= render "devise/shared/links" %> 
