詳細画面の見た目を修正

--- a/app/assets/stylesheets/articles/show.css
+++ b/app/assets/stylesheets/articles/show.css
@@ -11,8 +11,8 @@
 .articleShow__deleteButtonContainer{
   width: 200px;
   height: 50px;
-  padding: 8px;
   border: 2px solid #f59e42;
+  border-radius: 10px;
   text-align: center;
   line-height: 50px;
 }
