--- a/app/assets/stylesheets/articles/_articles.css
+++ b/app/assets/stylesheets/articles/_articles.css
@@ -25,3 +25,23 @@
   border-radius: 10px;
   font-size: 16px;
 }
+
+.articleIndex__themeContainer{
+  font-weight: bold;
+  font-size: 24px;
+  border-bottom: 1px solid #666;
+  margin-bottom: 16px;
+}
+
+.articleIndex__issueContainer,
+.articleIndex__measureContainer,
+.articleIndex__resultContainer,
+.articleIndex__postingTime,
+.articleIndex__username,
+.articleIndex__tagContainer{
+  margin: 8px 0;
+}
+
+.articleIndex__tagContainer{
+  color: rgb(0, 42, 255);
+}
