--- a/app/views/articles/search.html.erb
+++ b/app/views/articles/search.html.erb
@@ -10,6 +10,27 @@
   </div>
 <% end %>
 <div id="contents">
+<section>
 <h2>投稿された記事一覧</h2>
-<%=render partial:'articles', locals: {articles: @articles} %>
+<% @articles.each do |article| %>
+<div class="list">
+  <div>
+    <%= image_tag article.image if article.image.attached? %>
+  </div>
+  <div>
+    <h4><%= link_to article.theme, article_path(article) %></h4>
+    <p>課題：<%= article.issue %></p>
+    <p><%= l article.updated_at %></p>
+    <p><%= article.user.name %></p>
+    <p># <%= article.tags.first&.tag_name %></p>
+  </div>
+</div>
+<%end%>
+
+</section>
+
+<footer>
+<small>Copyright&copy; <a href="index.html">SAMPLE SITE</a> All Rights Reserved.</small>
+<span class="pr">《<a href="https://template-party.com/" target="_blank">Web Design:Template-Party</a>》</span>
+</footer>
 </div>
