--- a/app/assets/stylesheets/articles/show.css
+++ b/app/assets/stylesheets/articles/show.css
@@ -1,3 +1,13 @@
+.articleHeader{
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.articleShow__imageContainer{
+  display: flex;
+  justify-content: center;
+}
+
 .articleShow__btnContainer{
   width: 700px;
   height: 100px;
