詳細画面のビューを修正

--- a/app/assets/stylesheets/articles/show.css
+++ b/app/assets/stylesheets/articles/show.css
@@ -1,34 +1,20 @@
-.articleHeader{
-  font-weight: bold;
-  font-size: 24px;
-}
-
-.articleShow__imageContainer{
-  display: flex;
-  justify-content: center;
-}
-
 .articleShow__btnContainer{
-  width: 700px;
-  height: 100px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: 8px auto;
+  height: 100px;
 }
 
 .articleShow__editButtonContainer,
 .articleShow__deleteButtonContainer{
-  width: 200px;
-  height: 50px;
-  border: 2px solid #f59e42;
-  border-radius: 10px;
+  height: 60px;
+  width: 150px;
+  border: 1px solid #c16904;
   text-align: center;
-  line-height: 50px;
+  line-height: 60px;
 }
 
 .articleEditButton,
 .articleDeleteButton{
   text-decoration: none;
-  font-weight: bold;
 }
