一覧表示画面のビューを修正

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,9 +6,10 @@
 
 <div class="articleIndex__header">
 <%= form_with(url: search_articles_path, local: true, method: :get, class: "search-form") do |form| %>
-  <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
+  <%= form.text_field :keyword, placeholder: "課題で記事を検索する", class: "search-input" %>
   <div class="search-btn-space">
     <%= form.submit "検索", class: "search-btn" %>
+    <%= link_to '詳細検索ページ', detailsearch_articles_path %>
   </div>
 <% end %>
 </div>
