投稿画面を修正

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -39,6 +39,7 @@
   <div class="list">
   <h4>タグ</h4>
   <p>あとで記事を検索しやすいように、関連性のあるキーワードをタグとして登録できます（任意）</p>
+  <p>スペースで区切れば複数のタグをつけることが可能です</p>
   <%= f.text_field :tag_name, class: "tagForm" %>
   </div>
 
